--- a/leclerc-project-responsive-app/app/globals.css
+++ b/leclerc-project-responsive-app/app/globals.css
@@ -67,7 +67,7 @@ body {
   position: relative;
   margin-left: -50%;
   width: 200%;
-  height: 100%;
+  height: 45vw;
   background-color: #161616;
   transform: rotate(7deg);
   background-image: url('./../public/lec_letters.png');
@@ -77,8 +77,8 @@ body {
 }
 
 .image-whoami {
-  margin-left: 27.5%;
-  margin-top: 6%;
+  margin-left: 45vw;
+  margin-top: 7.5vw;
   width: 30vw;
   height: 30vw;
   transform: rotate(-7deg);
@@ -87,15 +87,15 @@ body {
 
 .text-whoami h1 {
   text-align: left;
-  margin-top: 2%;
-  margin-left: 25%;
+  margin-top: 2vw;
+  margin-left: 20vw;
   transform: rotate(-7deg); 
 }
 
 .text-whoami p {
   text-align: justify;
-  margin-top: 4%;
-  margin-left: 25%;
+  margin-top: 6vw;
+  margin-left: 18vw;
   width: 27.5%;
   transform: rotate(-7deg); 
 }
