--- a/leclerc-project-responsive-app/app/globals.css
+++ b/leclerc-project-responsive-app/app/globals.css
@@ -100,6 +100,13 @@ body {
   transform: rotate(-7deg); 
 }
 
+/* Best */
+.carousel-image {
+  width: 80%;
+  height: auto;
+  margin-left: 2vw;
+}
+
 /* Brands */
 .slider-brands {
   padding-top: 1vw;
